# plugin_loader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: DllMain.cpp
src/PluginLoader/: PluginLoaderCore.cpp  PluginLoaderCore.h
